# finding_donors_project

./: .gitignore  .pre-commit-config.yaml  COVERAGE.md  README.md  TODO.md  configuration.py  finding_donors.html  finding_donors.ipynb  pyproject.toml  requirements.txt  setup.ps1  visuals.py
.github/: FUNDING.yml  GITHUB.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
code_styling/: format_and_lint.cmd  format_and_lint.ps1  format_and_lint.sh
data/: DATA.md
my_scripts/: Clean-Up.ps1  Config.ps1  FormatAndLint.ps1  Run-All.ps1  Set-Up.ps1  Test.ps1
others/: setup.cmd  setup.ps1
pycodestyle/: all_format_and_lint.cmd  all_format_and_lint.ps1  all_format_and_lint.sh
src/: config.py
src/utils/: setup.py  visuals.py
tests/: test_config.py  test_configuration.py  test_dummy.py  test_jupyter_notebook.py  test_setup.py  test_visuals.py
tests/utils/: test_setup.py  test_visuals.py
utils/: config.py  configuration.py  setup.py  visuals.py
